--- a/index.html
+++ b/index.html
@@ -51,3 +51,33 @@
 <script src="public/script.js"></script>
 </body>
 </html>
+<section class="section">
+  <div class="container">
+    <h2>Produtos em Destaque</h2>
+    <div id="featured" class="grid products"></div>
+  </div>
+</section>
+
+<script>
+fetch('data/featured.json')
+  .then(r => r.json())
+  .then(items => {
+    const el = document.getElementById('featured');
+    el.innerHTML = items.map(p => `
+      <a class="card" href="${p.link}">
+        <img class="product" src="${p.image}" alt="${p.name}" onerror="this.style.display='none'"/>
+        <div class="card-pad">
+          <div class="title">${p.name}</div>
+          <div class="cat">${p.category}</div>
+          <div style="margin-top:8px">
+            <span class="btn btn-primary">Ver no Catálogo</span>
+          </div>
+        </div>
+      </a>
+    `).join('');
+  })
+  .catch(() => {
+    document.getElementById('featured').innerHTML =
+      '<div class="card card-pad" style="grid-column:1/-1">Não foi possível carregar os destaques.</div>';
+  });
+</script>
