--- a/index.html
+++ b/index.html
@@ -81,3 +81,10 @@ fetch('data/featured.json')
       '<div class="card card-pad" style="grid-column:1/-1">Não foi possível carregar os destaques.</div>';
   });
 </script>
+<section class="section">
+  <div class="container">
+    <h2 style="color:#0D1B2A;margin-bottom:16px">✨ Produtos em Destaque</h2>
+    <div id="featured-grid" class="grid products"></div>
+  </div>
+</section>
+
