--- a/index.html
+++ b/index.html
@@ -87,4 +87,10 @@ fetch('data/featured.json')
     <div id="featured-grid" class="grid products"></div>
   </div>
 </section>
+<section class="section">
+  <div class="container">
+    <h2 style="color:#0D1B2A;margin-bottom:16px">✨ Produtos em Destaque</h2>
+    <div id="featured-grid" class="grid products"></div>
+  </div>
+</section>
 
