--- a/sobre.html
+++ b/sobre.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Sobre Nós - RS Brindes</title>
-  <link rel="stylesheet" href="public/style.css">
+  <link rel="stylesheet" href="public/style.css"/>
 </head>
 <body>
+
 <header class="header gradient">
   <nav class="nav container">
     <div class="brand"><div class="logo">RS</div><span>RS BRINDES</span></div>
@@ -22,17 +23,22 @@
 </header>
 
 <section class="section container">
-  <h1>Sobre Nós</h1>
-  <p>Com mais de 21 anos de experiência no mercado de brindes, a RS Brindes é referência em qualidade e personalização. Após 5 anos atuando como terceirizada, decidimos dar um novo passo e nos consolidar como fornecedores B2B diretos.</p>
-  <p>Nosso portfólio inclui uma ampla variedade de produtos ideais para fortalecer marcas e fidelizar clientes. Nosso compromisso é entregar excelência, prazos e confiança.</p>
+  <h1>Sobre a RS Brindes</h1>
+  <p>Somos especialistas em brindes personalizados há mais de 21 anos. Após 5 anos atuando como terceirizados, nos consolidamos como fornecedor B2B para atender empresas, agências e times de marketing com escala, qualidade e prazo.</p>
+  <div class="grid products">
+    <div class="card card-pad"><strong>Especialização</strong><br/>Linha completa: canecas, copos, squeezes, camisas, canetas, cadernetas, agendas, guarda-chuvas e muito mais.</div>
+    <div class="card card-pad"><strong>B2B de verdade</strong><br/>Processos para atacado, nota fiscal, logística nacional e prazos confiáveis.</div>
+    <div class="card card-pad"><strong>Personalização</strong><br/>Serigrafia, laser, sublimação, tampografia e gravações sob medida.</div>
+  </div>
 </section>
 
 <footer class="footer">
   <div class="container foot">
     <span>© <span id="year"></span> RS Brindes</span>
+    <span>Campinas/SP • WhatsApp: (19) 98185-9815 • rsbrindes2020@gmail.com</span>
   </div>
 </footer>
 
-<script src="public/script.js"></script>
+<script src="public/script.js?v=3"></script>
 </body>
 </html>
