--- a/orcamento.html
+++ b/orcamento.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Solicitar Orçamento - RS Brindes</title>
-  <link rel="stylesheet" href="public/style.css">
+  <link rel="stylesheet" href="public/style.css"/>
 </head>
 <body>
 
@@ -24,11 +24,11 @@
 
 <section class="section container">
   <h1>Solicitar Orçamento</h1>
-  <form class="grid" style="max-width:500px;margin:auto;">
+  <form class="grid" style="max-width:520px;margin:auto;" onsubmit="alert('Obrigado! Entraremos em contato.'); return false;">
     <input type="text" placeholder="Nome completo" required>
     <input type="email" placeholder="E-mail" required>
     <input type="tel" placeholder="Telefone/WhatsApp" required>
-    <textarea placeholder="Descreva o produto ou quantidade desejada" rows="4" required></textarea>
+    <textarea placeholder="Descreva o produto, quantidade e prazos desejados" rows="4" required></textarea>
     <button type="submit" class="btn btn-primary">Enviar</button>
   </form>
 </section>
@@ -36,9 +36,10 @@
 <footer class="footer">
   <div class="container foot">
     <span>© <span id="year"></span> RS Brindes</span>
+    <span>Campinas/SP • WhatsApp: (19) 98185-9815 • rsbrindes2020@gmail.com</span>
   </div>
 </footer>
 
-<script src="public/script.js"></script>
+<script src="public/script.js?v=3"></script>
 </body>
 </html>
