--- a/blog.html
+++ b/blog.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Blog - RS Brindes</title>
-  <link rel="stylesheet" href="public/style.css">
+  <link rel="stylesheet" href="public/style.css"/>
 </head>
 <body>
 
@@ -24,15 +24,17 @@
 
 <section class="section container">
   <h1>Blog RS Brindes</h1>
-  <p>Em breve novidades, dicas e lançamentos exclusivos 📰✨</p>
+  <p>Em breve, novidades, dicas e lançamentos para seu brinde fazer mais efeito no seu marketing.</p>
 </section>
 
 <footer class="footer">
   <div class="container foot">
     <span>© <span id="year"></span> RS Brindes</span>
+    <span>Campinas/SP • WhatsApp: (19) 98185-9815 • rsbrindes2020@gmail.com</span>
   </div>
 </footer>
 
-<script src="public/script.js"></script>
+<script src="public/script.js?v=3"></script>
 </body>
 </html>
+    
