--- a/sobre.html
+++ b/sobre.html
@@ -1,44 +1,80 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-  <meta charset="UTF-8"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Sobre Nós - RS Brindes</title>
-  <link rel="stylesheet" href="public/style.css"/>
+  <link rel="stylesheet" href="public/style.css">
 </head>
 <body>
 
-<header class="header gradient">
-  <nav class="nav container">
-    <div class="brand"><div class="logo">RS</div><span>RS BRINDES</span></div>
-    <div class="menu">
-      <a href="index.html">Home</a>
-      <a href="sobre.html" class="active">Sobre Nós</a>
-      <a href="catalogo.html">Catálogo</a>
-      <a href="orcamento.html">Orçamento</a>
-      <a href="contato.html">Contato</a>
-      <a href="blog.html">Blog</a>
+  <!-- Cabeçalho -->
+  <header class="header gradient">
+    <div class="container nav">
+      <a href="index.html" class="brand">
+        <div class="logo">RS</div>
+        <strong>RS Brindes</strong>
+      </a>
+      <nav class="menu">
+        <a href="index.html">Início</a>
+        <a href="catalogo.html">Catálogo</a>
+        <a href="sobre.html" class="active">Sobre Nós</a>
+        <a href="orcamento.html">Orçamento</a>
+        <a href="blog.html">Blog</a>
+        <a href="contato.html">Contato</a>
+      </nav>
     </div>
-  </nav>
-</header>
+  </header>
 
-<section class="section container">
-  <h1>Sobre a RS Brindes</h1>
-  <p>Somos especialistas em brindes personalizados há mais de 21 anos. Após 5 anos atuando como terceirizados, nos consolidamos como fornecedor B2B para atender empresas, agências e times de marketing com escala, qualidade e prazo.</p>
-  <div class="grid products">
-    <div class="card card-pad"><strong>Especialização</strong><br/>Linha completa: canecas, copos, squeezes, camisas, canetas, cadernetas, agendas, guarda-chuvas e muito mais.</div>
-    <div class="card card-pad"><strong>B2B de verdade</strong><br/>Processos para atacado, nota fiscal, logística nacional e prazos confiáveis.</div>
-    <div class="card card-pad"><strong>Personalização</strong><br/>Serigrafia, laser, sublimação, tampografia e gravações sob medida.</div>
-  </div>
-</section>
+  <!-- Seção Principal -->
+  <section class="section">
+    <div class="container">
+      <h1>Sobre a RS Brindes</h1>
+      <p>A <strong>RS Brindes</strong> é especializada na criação e fornecimento de brindes personalizados que fortalecem marcas e encantam pessoas. Com atendimento rápido e eficiente, oferecemos produtos de alta qualidade e personalização exclusiva.</p>
 
-<footer class="footer">
-  <div class="container foot">
-    <span>© <span id="year"></span> RS Brindes</span>
-    <span>Campinas/SP • WhatsApp: (19) 98185-9815 • rsbrindes2020@gmail.com</span>
-  </div>
-</footer>
+      <p><strong>Entregamos seus brindes em até 72 horas!</strong> Nosso compromisso é garantir agilidade sem abrir mão da excelência.</p>
+    </div>
+  </section>
 
-<script src="public/script.js?v=3"></script>
-</body>
-</html>
+  <!-- Missão, Visão e Valores -->
+  <section class="section gradient" style="color:#fff;">
+    <div class="container">
+      <h2>Missão, Visão e Valores</h2>
+      <div class="grid" style="grid-template-columns: repeat(auto-fit, minmax(240px, 1fr)); gap: 24px; margin-top: 24px;">
+        <div class="card card-pad">
+          <h3>Missão</h3>
+          <p>Oferecer brindes de qualidade que fortaleçam a identidade de marcas e gerem conexões duradouras com seus públicos.</p>
+        </div>
+        <div class="card card-pad">
+          <h3>Visão</h3>
+          <p>Ser referência nacional em brindes personalizados, destacando-se pela agilidade, inovação e excelência no atendimento.</p>
+        </div>
+        <div class="card card-pad">
+          <h3>Valores</h3>
+          <ul>
+            <li>Comprometimento com o cliente</li>
+            <li>Agilidade e eficiência</li>
+            <li>Qualidade em cada detalhe</li>
+            <li>Transparência e confiança</li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Seção de Destaque -->
+  <section class="section">
+    <div class="container">
+      <h2>Por que escolher a RS Brindes?</h2>
+      <div class="grid" style="grid-template-columns: repeat(auto-fit, minmax(220px, 1fr)); gap: 24px; margin-top: 24px;">
+        <div class="card card-pad">
+          <h3>🚚 Entrega Rápida</h3>
+          <p>Receba seus brindes em até <strong>72 horas</strong> com segurança e eficiência.</p>
+        </div>
+        <div class="card card-pad">
+          <h3>🎨 Personalização Exclusiva</h3>
+          <p>Cada produto é feito para destacar a identidade da sua marca.</p>
+        </div>
+        <div class="card card-pad">
+          <h3>🤝 Atendimento Humanizado</h3>
+          <p>Estamos sempre prontos para ajudar com agi
