--- a/sobre.html
+++ b/sobre.html
@@ -8,73 +8,49 @@
 </head>
 <body>
 
-  <!-- Cabeçalho -->
+  <!-- Header -->
   <header class="header gradient">
     <div class="container nav">
       <a href="index.html" class="brand">
-        <div class="logo">RS</div>
-        <strong>RS Brindes</strong>
+        <img src="public/img/logo.png" alt="RS Brindes" class="logo">
+        <span>RS Brindes</span>
       </a>
       <nav class="menu">
         <a href="index.html">Início</a>
+        <a href="sobre.html" class="active">Sobre</a>
         <a href="catalogo.html">Catálogo</a>
-        <a href="sobre.html" class="active">Sobre Nós</a>
-        <a href="orcamento.html">Orçamento</a>
         <a href="blog.html">Blog</a>
         <a href="contato.html">Contato</a>
       </nav>
     </div>
   </header>
 
-  <!-- Seção Principal -->
   <section class="section">
     <div class="container">
-      <h1>Sobre a RS Brindes</h1>
-      <p>A <strong>RS Brindes</strong> é especializada na criação e fornecimento de brindes personalizados que fortalecem marcas e encantam pessoas. Com atendimento rápido e eficiente, oferecemos produtos de alta qualidade e personalização exclusiva.</p>
+      <h1>Sobre Nós</h1>
+      <p>A <strong>RS Brindes</strong> nasceu com a missão de oferecer brindes personalizados com qualidade, agilidade e criatividade. Nosso compromisso é transformar ideias em experiências memoráveis para marcas e clientes.</p>
 
-      <p><strong>Entregamos seus brindes em até 72 horas!</strong> Nosso compromisso é garantir agilidade sem abrir mão da excelência.</p>
+      <h2>Missão</h2>
+      <p>Fornecer brindes personalizados de alta qualidade com produção ágil em até <strong>72 horas</strong>, encantando nossos clientes e fortalecendo marcas.</p>
+
+      <h2>Visão</h2>
+      <p>Ser referência nacional em brindes personalizados, reconhecida pela excelência no atendimento e inovação constante.</p>
+
+      <h2>Valores</h2>
+      <ul>
+        <li>🚀 Agilidade</li>
+        <li>🤝 Comprometimento</li>
+        <li>💡 Criatividade</li>
+        <li>⭐ Qualidade</li>
+      </ul>
     </div>
   </section>
 
-  <!-- Missão, Visão e Valores -->
-  <section class="section gradient" style="color:#fff;">
-    <div class="container">
-      <h2>Missão, Visão e Valores</h2>
-      <div class="grid" style="grid-template-columns: repeat(auto-fit, minmax(240px, 1fr)); gap: 24px; margin-top: 24px;">
-        <div class="card card-pad">
-          <h3>Missão</h3>
-          <p>Oferecer brindes de qualidade que fortaleçam a identidade de marcas e gerem conexões duradouras com seus públicos.</p>
-        </div>
-        <div class="card card-pad">
-          <h3>Visão</h3>
-          <p>Ser referência nacional em brindes personalizados, destacando-se pela agilidade, inovação e excelência no atendimento.</p>
-        </div>
-        <div class="card card-pad">
-          <h3>Valores</h3>
-          <ul>
-            <li>Comprometimento com o cliente</li>
-            <li>Agilidade e eficiência</li>
-            <li>Qualidade em cada detalhe</li>
-            <li>Transparência e confiança</li>
-          </ul>
-        </div>
-      </div>
+  <footer class="footer">
+    <div class="container foot">
+      <p>© <span id="year"></span> RS Brindes — Todos os direitos reservados.</p>
     </div>
-  </section>
+  </footer>
 
-  <!-- Seção de Destaque -->
-  <section class="section">
-    <div class="container">
-      <h2>Por que escolher a RS Brindes?</h2>
-      <div class="grid" style="grid-template-columns: repeat(auto-fit, minmax(220px, 1fr)); gap: 24px; margin-top: 24px;">
-        <div class="card card-pad">
-          <h3>🚚 Entrega Rápida</h3>
-          <p>Receba seus brindes em até <strong>72 horas</strong> com segurança e eficiência.</p>
-        </div>
-        <div class="card card-pad">
-          <h3>🎨 Personalização Exclusiva</h3>
-          <p>Cada produto é feito para destacar a identidade da sua marca.</p>
-        </div>
-        <div class="card card-pad">
-          <h3>🤝 Atendimento Humanizado</h3>
-          <p>Estamos sempre prontos para ajudar com agi
+</body>
+</html>
